<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YakChat</string>
    <string name="action_settings">Settings</string>

    <string-array name="items">
        <item>Login</item>
        <item>Messaging</item>
        <item>Settings</item>
        <item>Registration</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Login strings -->

    <string name="logBtn">Login</string>
    <string name="uNameHint">User Name</string>
    <string name="pWordHint">Password</string>
    <string name="login">Please Login</string>
    <string name="messageHint">Send a message</string>
    <string name="send_button">Send button</string>
    <string name="camera_button">Image/camera button</string>
    <string name="location_button">Location button</string>

    <!-- Registration strings -->

    <string name="regBtn">Register</string>
    <string name="uNameReg">Enter User Name</string>
    <string name="emailReg">Enter Email Address</string>
    <string name="pWordReg">Enter Password</string>
    <string name="pWordVal">Re-type Password</string>
    <string name="registration">Please Register</string>

    <!-- Messaging strings -->

    <string name="message">Messages</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>