<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationFrag" >

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/uNameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uNameReg"
        android:maxLength="15" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailReg"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pWordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pWordReg"
        android:inputType="textPassword"
        android:maxLength="15" />
    
    <EditText
        android:id="@+id/pWordVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pWordVal"
        android:inputType="textPassword"
        android:maxLength="15" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registration" />

</LinearLayout>