<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginFrag" >

    <!-- TODO: Update blank fragment layout -->

    <com.kruztech.yakchat.CustomTextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:shadowColor="#008080"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/uName"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uNameHint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pWordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logBtn" />

</LinearLayout>