<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MessagingFrag" >

    <!-- TODO: Update blank fragment layout -->

    <com.kruztech.yakchat.CustomTextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:shadowColor="#008080"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/messageHint" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="-10dp"
        android:contentDescription="@string/camera_button"
        android:padding="5dp"
        android:src="@drawable/ic_action_camera" />

    <ImageView
        android:id="@+id/locationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-10dp"
        android:layout_marginRight="-10dp"
        android:layout_toLeftOf="@+id/imageBtn"
        android:contentDescription="@string/location_button"
        android:padding="5dp"
        android:src="@drawable/ic_action_place" />

    <ImageView
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/locationBtn"
        android:contentDescription="@string/send_button"
        android:padding="5dp"
        android:src="@drawable/ic_action_send_now" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/message"
        android:layout_alignLeft="@+id/message"
        android:layout_below="@+id/subTitle"
        android:stackFromBottom="true"
        android:transcriptMode="normal" >

    </ListView>

</RelativeLayout>